crates/snapshot-tests/tests/snapshots/parser__bad_floats__trailing_dec.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[InvalidFloat]: invalid float: nothing after decimal point at `a`
  ┌─ trailing_dec:1:5
  │
1 │ a = 0.
  │     ^^ invalid float: nothing after decimal point


error: invalid float: nothing after decimal point at `a`
 --> trailing_dec:1:5
  |
1 | a = 0.
  |     ^^ invalid float: nothing after decimal point
Error {
    kind: "InvalidFloat",
    message: "invalid float: nothing after decimal point",
    span: 4..6,
    path: Some(
        "a",
    ),
}
